[tool.poetry]
name = "derivation"
version = "0.5.0"
description = ""
authors = ["Rain Wu <rain.wu@appier.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.1.0"
pytest-asyncio = "^0.20.3"
pytest-timeout = "^2.1.0"
safety = "^2.3.5"
bandit = "^1.7.4"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target_version = ['py311']
include = '\.pyi?$'

[tool.isort]
line_length = 88
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
src_paths = ['derivation', 'tests']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
exclude = [
    "^tests/.*$",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q -n auto --disable-warnings --asyncio-mode=strict --timeout=300"
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "derivation/errors.py",
    "derivation/types.py",
]

[tool.coverage.report]
fail_under = 100
skip_covered = true
skip_empty = true

[tool.bandit]
targets = [
    "derivation",
]
exclude_dirs = [
    "tests",
]
